syntax = "proto3";

import "operator.proto";

package buildkite;

// Interact with the Buildkite.com Continuous Integration server. Retrieve the
// status of projects, setup new ones, and trigger builds.
service BuildkiteService {
	option (operator.name) = "buildkite";
	// List the status of all (i.e. the status of the last build) of one or
	// all projects.
	rpc Status(StatusRequest) returns (StatusResponse);
	// List the last builds of one or all projects, optionally limited to a
	// project.
	rpc ListBuilds(ListBuildsRequest) returns (ListBuildsResponse);
}

message StatusRequest {
	// Optional project slug.
	string slug = 1;
}

message StatusResponse {
  operator.Output output = 1;
}

message ListBuildsRequest {
	string project_slug = 1;
}

message ListBuildsResponse {
  operator.Output output = 1;
}
